<resources>
    <string name="app_name">Popular Movies</string>
    <string name="release_date">Release Date :</string>
    <string name="user_rating">User Rating :</string>
    <string name="plot_synopsis">Plot Synopsis :</string>
    <string name="trailers">Trailers :</string>
    <string name="reviews">Reviews :</string>

    <string name="youtube_url">http://www.youtube.com/watch?v=</string>

    <string name="video">videos</string>
    <string name="review">reviews</string>
    <string name="settings">Settings</string>
    <string name="something_went_wrong_please_try_again">(SomeThing Went Wrong Please try again)</string>
    <string name="mark_as_favourite">Mark As Favourite</string>
    <string name="remove_as_favourite">Remove As Favourite</string>
    <string name="sort_by_label">Sort Movies By</string>
    <string name="sortByKey">sortBy</string>

    <string name="popularity" >Popularity</string>
    <string name="top_rated" >Top Rated</string>
    <string name="favorite" >Favorite</string>

    <string name="popularity_value" translatable="false" >popularity</string>
    <string name="top_rated_value" translatable="false">toprated</string>
    <string name="favorite_value" translatable="false">favorite</string>
    <string name="network_error">An Error detected, Please make sure you are connected to internet and try again</string>
    <string name="database_error">No Movie Found please try adding a Movie As Favorite first</string>"

</resources>
